Added reset button and directions object

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tetris</h1>
-    <h2>Score: <span>0</span></h2>
-    <h2>Level: <span>1</span></h2>
+    <h1 class="game__title">Tetris</h1>
+    <h2 class = "game__score">Score: <span>0</span></h2>
+    <h2 class = "game__level">Level: <span>1</span></h2>
     <canvas id="game-canvas"></canvas>
-    <button>Reset</button>
+    <button class="game__resetButton">Reset</button>
     <script defer src="app.js"></script>
 </body>
 </html>
