Score and level now updates on line clears

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1 class="game__title">Tetris</h1>
-    <h2 class = "game__score">Score: <span>0</span></h2>
-    <h2 class = "game__level">Level: <span>1</span></h2>
+    <h2 class = "game__score">Score: <span id="score">0</span></h2>
+    <h2 class = "game__level">Level: <span id="level">1</span></h2>
     <canvas id="game-canvas"></canvas>
     <button class="game__resetButton">Reset</button>
     <script defer src="app.js"></script>
