--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,15 @@
     <h1 class="game__title">Tetris</h1>
     <h2 class = "game__score">Score: <span id="score">0</span></h2>
     <h2 class = "game__level">Level: <span id="level">1</span></h2>
-    <canvas id="game-canvas"></canvas>
+    <div class="game__section">
+        <div class="game__hold">Hold: </div>
+        <canvas id="game-canvas"></canvas>
+        <div class="game__highscores">
+            <h1>Highscores:</h1>
+        </div>
+    </div>
+    
+    
     <button class="game__resetButton">Reset</button>
     <script defer src="app.js"></script>
 </body>
