--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <div class="game__section">
         <div class="game__hold">
             <h1>Hold:</h1>
+            <img class="game__hold-image" src="./images/LBlock.png" alt="" srcset="">
         </div>
         
         <canvas id="game-canvas"></canvas>
